# Corona

./: .gitignore  README.md
Arduino/sketch_anarogu_test/: sketch_anarogu_test.ino
Arduino/sketch_i2c/: sketch_i2c.ino
Arduino/sketch_i2c_anarogu/: sketch_i2c_anarogu.ino
Client/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Client/_input/: vas_int_r.csv
Client/inc/: define.hpp  log.hpp  muscle.hpp  tcpClient.hpp
Client/muscle/: CMakeLists.txt  Makefile  cmake_install.cmake
Client/muscle/inc/: define.hpp  i2c.hpp  muscle.hpp  pid.hpp  virtualMotor.hpp  virtualServoMotor.hpp
Client/muscle/src/: i2c.cxx  muscle.cxx  pid.cxx  virtualMotor.cxx  virtualServoMotor.cxx
Client/src/: log.cxx  main.cxx  muscle.cxx  tcpClient.cxx
Client/tcpClient/: CMakeLists.txt  Makefile  cmake_install.cmake
Client/tcpClient/inc/: tcpClient.hpp
Client/tcpClient/src/: tcpClient.cxx
Server/: CMakeLists.txt
Server/src/: main.cxx
Server/tcpServer/: CMakeLists.txt
Server/tcpServer/inc/: tcpServer.hpp
Server/tcpServer/src/: tcpServer.cxx
TsvToCsv/: _readme.md  check_dforce.py  force.cxx  force.py  forceMax.py  forcePlot.py  make.sh  muscle_motor.py  muscle_nw.py  testGraf.py  wN.py
TsvToCsv/_import/: 2019_ResultsCMC_subject01_walk1_Actuation_force.tsv  2019_subject01_walk1_Actuation_force.tsv  kaneko.csv  kaneko.tsv  sub_walk_Nm.xlsx  sub_walk_Nmのコピー.xlsx  subject01_walk1_Actuation_force.sto  subject01_walk1_Actuation_force.tsv  subject01_walk1_Actuation_speed.tsv
TsvToCsv/img/: max_2019_ResultsCMC_subject01_walk1_Actuation_force.csv  max_2019_ResultsCMC_subject01_walk1_Actuation_force.xlsx  max_subject01_walk1_Actuation_force.csv  max_subject01_walk1_Actuation_force.xlsx
